<resources>
    <string name="app_name">Shoe</string>
    <string name="heading">Shoe Designer</string>
    <string name="low">Low Top</string>
    <string name="high">High Top</string>
    <string name="knee">Knee High</string>
    <string name="shoeButton">Create your shoe!</string>
    <string name="platformCheck">Platform</string>
    <string name="reflectiveCheck">Reflective</string>
    <string name="cushionCheck">Extra Cushion</string>
    <string name="logo">Visible Logo</string>
    <string name="locationButton">Find Shoes</string>
    <string-array name="location">
        <item>Higher Fashion</item>
        <item>Casual</item>
        <item>Sneakers</item>
    </string-array>
    <string name="title_activity_shoe">Shoes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="feedbackHint">Review</string>
</resources>